# epito

./: .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/api/ai/: route.ts
app/api/attachments/: route.ts
app/api/documents/: route.ts
app/api/graph/: route.ts
app/api/health/: route.ts
app/api/images/: route.ts
app/api/notes/: route.ts
components/common/: BrandedSplash.tsx  ErrorBoundary.tsx
components/editor/: Editor.tsx
components/related/: RelatedPanel.tsx
components/search/: SearchDialog.tsx
components/sidebar/: Sidebar.tsx
components/startup/: StartupScreen.tsx
components/ui/: primitives.tsx
components/viewer/: DocumentViewer.tsx
inference/: export.ts
lib/: database.ts  encryption.ts  export.ts  lifecycle.ts  ocr.ts  types.ts  utils.ts
lib/ai/: answer-engine.ts  embeddings.ts  llm.ts  pipeline.ts  vector.ts
public/: manifest.json  sw.js
scripts/: downloadLlamaServer.mjs  downloadNode.mjs  generateIcons.mjs  paddleOcr.py  prepareStandalone.mjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: libggml-base.dylib  libggml-cpu.dylib  libggml-metal.dylib  libggml-rpc.dylib  libllama.dylib  libllava_shared.dylib  llama-server-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  llama_server.rs  model.rs  native_win.rs
types/: html-to-docx.d.ts
(+21 files in other folders)
